feat: design and damage LP

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jake Plus
 email: Jake@JakePlus.com
 description: Indy Artist, Producer, & Engineer
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://JakePlus.com" # the base hostname & protocol for your site
 
 # Build settings
